force-app/main/default/objects/Quota__c/Quota__c.object-meta.xml
<CustomObject>
    <description>[a10][Quota__c] Cota definida mensalmente para cada coordenador/vendedor.</description>
    <label>Planejamento</label>
    <nameField>
        <displayFormat>Cota {0000000}</displayFormat>
        <label>Nome de Planejamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planejamentos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>