force-app/main/default/objects/Quota__c/fields/CurrentMonthTxt__c.field-meta.xml
<CustomField>
    <fullName>CurrentMonthTxt__c</fullName>
    <label>Mês Vigente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <default>true</default>
                <label>Janeiro</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Fevereiro</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Março</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Abril</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Maio</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Junho</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Julho</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Agosto</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Setembro</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Outubro</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Novembro</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Dezembro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>