force-app/main/default/objects/Quota__c/fields/DistributionFml__c.field-meta.xml
<CustomField>
    <fullName>DistributionFml__c</fullName>
    <formula>PlannedAmountNmb__c/TotalValueNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribuição</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>