force-app/main/default/objects/Quota__c/fields/IdentifierTxt__c.field-meta.xml
<CustomField>
    <fullName>IdentifierTxt__c</fullName>
    <externalId>true</externalId>
    <label>Identificador</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>