force-app/main/default/objects/Quota__c/fields/LinkSalesPlanFml__c.field-meta.xml
<CustomField>
    <fullName>LinkSalesPlanFml__c</fullName>
    <formula>IF(RecordType.DeveloperName=&apos;QuotaAttainment&apos;,
HYPERLINK(&apos;/apex/AddSalesPlanPage?scontrolCaching=1&amp;id=&apos; + Id, &apos;Planejar Vendas&apos;, &apos;_self&apos;),
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planejar Vendas</label>
    <type>Text</type>
</CustomField>