force-app/main/default/objects/Quota__c/fields/MonthYearFml__c.field-meta.xml
<CustomField>
    <fullName>MonthYearFml__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp;Id, FormattedMonthFml__c &amp; &apos;/&apos; &amp; RIGHT(TEXT(CurrentYearTxt__c),2), &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mês/Ano Vigente</label>
    <type>Text</type>
</CustomField>