force-app/main/default/objects/Quota__c/fields/OrderBacklogNmb__c.field-meta.xml
<CustomField>
    <fullName>OrderBacklogNmb__c</fullName>
    <label>Carteira</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>