force-app/main/default/objects/Quota__c/fields/PlannedAmountNmb__c.field-meta.xml
<CustomField>
    <fullName>PlannedAmountNmb__c</fullName>
    <label>Total Planejado</label>
    <summarizedField>SalesPlanning__c.TotalValueNmb__c</summarizedField>
    <summaryForeignKey>SalesPlanning__c.QuotaLkp__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>