force-app/main/default/objects/Quota__c/fields/QuotaTypeTxt__c.field-meta.xml
<CustomField>
    <fullName>QuotaTypeTxt__c</fullName>
    <label>Tipo de Cota</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>ROL Total</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>ROL de Conexões</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>Positivação Varejos</label>
            </value>
            <value>
                <fullName>021</fullName>
                <label>SUPERCPVC</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>ROL de Tubos</label>
            </value>
            <value>
                <fullName>014</fullName>
                <label>Positivação Cliente</label>
            </value>
            <value>
                <fullName>018</fullName>
                <label>ROL Água Quente</label>
            </value>
            <value>
                <fullName>025</fullName>
                <label>ROL/Kg</label>
            </value>
            <value>
                <fullName>027</fullName>
                <label>BIAX PN 12,5</label>
            </value>
            <value>
                <fullName>028</fullName>
                <label>BIAX PN 16</label>
            </value>
            <value>
                <fullName>029</fullName>
                <label>ROL Total Lançamentos/Produtos</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Microaspersão Gotejamento</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>ROL Água Fria</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>