force-app/main/default/objects/Quota__c/fields/RevenueNmb__c.field-meta.xml
<CustomField>
    <fullName>RevenueNmb__c</fullName>
    <label>Faturamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>