force-app/main/default/objects/Quota__c/fields/RevenuePercentFml__c.field-meta.xml
<CustomField>
    <fullName>RevenuePercentFml__c</fullName>
    <formula>IF(TotalValueNmb__c!=0, RevenueNmb__c / TotalValueNmb__c, null)</formula>
    <label>% Alcançado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>