force-app/main/default/objects/Quota__c/fields/SellerLkp__c.field-meta.xml
<CustomField>
    <fullName>SellerLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor</label>
    <referenceTo>Seller__c</referenceTo>
    <relationshipName>Cotas</relationshipName>
    <type>Lookup</type>
</CustomField>