force-app/main/default/objects/Quota__c/fields/SellerNumberFml__c.field-meta.xml
<CustomField>
    <fullName>SellerNumberFml__c</fullName>
    <formula>SellerLkp__r.SellerNumberNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do Vendedor</label>
    <type>Text</type>
</CustomField>