force-app/main/default/objects/Quota__c/fields/SimulatedPercentFml__c.field-meta.xml
<CustomField>
    <fullName>SimulatedPercentFml__c</fullName>
    <formula>SimulatedTotalFml__c / TotalValueNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Simulado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>