force-app/main/default/objects/Quota__c/fields/SimulatedTotalFml__c.field-meta.xml
<CustomField>
    <fullName>SimulatedTotalFml__c</fullName>
    <formula>RevenueNmb__c + OrderBacklogNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Simulado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>