force-app/main/default/objects/Quota__c/recordTypes/Positivation.recordType-meta.xml
<RecordType>
    <fullName>Positivation</fullName>
    <active>true</active>
    <label>Positivação</label>
</RecordType>