force-app/main/default/objects/Quota__c/recordTypes/QuotaAttainment.recordType-meta.xml
<RecordType>
    <fullName>QuotaAttainment</fullName>
    <active>true</active>
    <label>Atingimento de Cota</label>
</RecordType>