force-app/main/default/objects/Quota__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <label>Padrão</label>
</RecordType>