force-app/main/default/objects/Quota__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MonthYearFml__c</columns>
    <columns>SellerNumberFml__c</columns>
    <columns>SellerLkp__c</columns>
    <columns>TotalValueNmb__c</columns>
    <columns>DistributionFml__c</columns>
    <columns>SimulatedTotalFml__c</columns>
    <columns>RevenuePercentFml__c</columns>
    <columns>LinkSalesPlanFml__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CurrentDateFml__c</field>
        <operation>equals</operation>
        <value>THIS_QUARTER</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Quota__c.QuotaAttainment</value>
    </filters>
    <label>Planejamento de Vendas - Trimestre Atual</label>
</ListView>