force-app/main/default/objects/Quota__c/listViews/Todas.listView-meta.xml
<ListView>
    <fullName>Todas</fullName>
    <columns>MonthYearFml__c</columns>
    <columns>QuotaTypeTxt__c</columns>
    <columns>SellerNumberFml__c</columns>
    <columns>SellerLkp__c</columns>
    <columns>TotalValueNmb__c</columns>
    <columns>SimulatedTotalFml__c</columns>
    <columns>RevenuePercentFml__c</columns>
    <columns>LinkSalesPlanFml__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>